# tonkatu

./: .dockerignore  .gitignore  docker-compose.yml
elasticsearch/: Dockerfile  sudachi.json
jupyter/: Dockerfile
jupyter/src/: pyproject.toml
notebooks/: Dockerfile
notebooks/src/: pyproject.toml
streamlit/: Dockerfile
streamlit/src/: pyproject.toml
