[tool.poetry]
name = "porkcutlet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
#pytensor = "^2.25.5"
pymc = "^5.17.0"
statsmodels = "^0.14.4"
jupysql = "^0.10.14"
duckdb-engine = "^0.13.2"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
mysqlclient = "^2.2.4"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.13.2"
watermark = "^2.5.0"
graphviz = "^0.20.3"
ipywidgets = "^8.1.5"
toml = "^0.10.2"
plotnine = "^0.13.6"
rpy2 = "^3.5.16"
pymysql = "^1.1.1"
tqdm = "^4.66.5"
elasticsearch = "^8.15.1"
tslearn = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
